# MiniProject

./: README.md
.github/workflows/: keep_alive.yml
backend/: .envExample  .gitignore  DOCUMENTATION.md  README.md  main.py  pyproject.toml  requirements.txt  test_accuracy.py  test_groq.py  test_results.json
backend/config/: agents.yaml  tasks.yaml
backend/crew/: crew.py  llm.py
backend/database/: db.py
backend/feature_docs/: heatmap.md  keep_alive_health_check.md  telegram_bot.md  trending_news.md  voice_stt_tts.md
backend/server/: api.py  credibility_scorer.py  heatmap.py  intelligent_image_detection.py  media_verification.py
backend/telegram_bot/: __init__.py  bot.py  formatter.py  handlers.py  rate_limiter.py  user_prefs.py
backend/tools/: web_search.py
backend/trending/: __init__.py  filter.py  groq_analyzer.py  pipeline.py  rss_fetcher.py
frontend/TruthCrew/: package-lock.json  package.json  vite.config.ts.timestamp-1771740926803-93ccbf5ff481d.mjs
frontend/TruthCrew/src/: App.tsx  index.css
frontend/TruthCrew/src/components/: Footer.tsx  HeatmapInsight.tsx  HeatmapLegend.tsx  IndiaMap.tsx  LeafletHeatmap.tsx  Navigation.tsx  ScoreBreakdown.tsx  SpreadSummary.tsx  TelegramWidget.tsx  TopRegionsPanel.tsx  VoiceInput.tsx
frontend/TruthCrew/src/pages/: About.tsx  Analyze.tsx  Home.tsx  MediaVerification.tsx  Trending.tsx
frontend/TruthCrew/src/services/: api.ts
